--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ body {
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html">Daniel J. Vera</a>
+                <a href="index.html">Daniel J. Vera, Ph.D.</a>
             </div>
             <div class="hamburger">
                 <span></span>
